Fixes node/api interaction

--- a/package.json
+++ b/package.json
@@ -6777,6 +6777,12 @@
 				"icon": "$(refresh)"
 			},
 			{
+				"command": "gitlens.views.workspaces.refresh",
+				"title": "Refresh",
+				"category": "GitLens",
+				"icon": "$(refresh)"
+			},
+			{
 				"command": "gitlens.views.worktrees.copy",
 				"title": "Copy",
 				"category": "GitLens"
@@ -9094,6 +9100,10 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.views.workspaces.refresh",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.views.worktrees.copy",
 					"when": "false"
 				},
@@ -10480,6 +10490,11 @@
 				{
 					"command": "gitlens.views.timeline.refresh",
 					"when": "view =~ /^gitlens\\.views\\.timeline/",
+					"group": "navigation@99"
+				},
+				{
+					"command": "gitlens.views.workspaces.refresh",
+					"when": "view =~ /^gitlens\\.views\\.workspaces/",
 					"group": "navigation@99"
 				},
 				{
