Adds locate command for workspace repos

--- a/package.json
+++ b/package.json
@@ -6786,6 +6786,12 @@
 				"icon": "$(refresh)"
 			},
 			{
+				"command": "gitlens.views.workspaces.locateRepo",
+				"title": "Locate Repository",
+				"category": "GitLens",
+				"icon": "$(folder-opened)"
+			},
+			{
 				"command": "gitlens.views.workspaces.refresh",
 				"title": "Refresh",
 				"category": "GitLens",
@@ -9106,6 +9112,10 @@
 				},
 				{
 					"command": "gitlens.views.timeline.refresh",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.workspaces.locateRepo",
 					"when": "false"
 				},
 				{
@@ -11779,6 +11789,11 @@
 				{
 					"command": "gitlens.stashApply",
 					"when": "!gitlens:readonly && !gitlens:untrusted && !gitlens:hasVirtualFolders && viewItem == gitlens:stash",
+					"group": "inline@1"
+				},
+				{
+					"command": "gitlens.views.workspaces.locateRepo",
+					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)/ || viewItem == gitlens:workspaceMissingRepository",
 					"group": "inline@1"
 				},
 				{
