Adds UX for adding and removing repos from cloud workspaces

--- a/package.json
+++ b/package.json
@@ -6800,10 +6800,22 @@
 				"enablement": "!operationInProgress"
 			},
 			{
+				"command": "gitlens.views.workspaces.addRepo",
+				"title": "Add Repository to Workspace...",
+				"category": "GitLens",
+				"icon": "$(add)"
+			},
+			{
 				"command": "gitlens.views.workspaces.locateRepo",
 				"title": "Locate Repository",
 				"category": "GitLens",
 				"icon": "$(folder-opened)"
+			},
+			{
+				"command": "gitlens.views.workspaces.removeRepo",
+				"title": "Remove Repository from Workspace...",
+				"category": "GitLens",
+				"icon": "$(trash)"
 			},
 			{
 				"command": "gitlens.views.workspaces.refresh",
@@ -9137,7 +9149,15 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.views.workspaces.addRepo",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.views.workspaces.locateRepo",
+					"when": "false"
+				},
+				{
+					"command": "gitlens.views.workspaces.removeRepo",
 					"when": "false"
 				},
 				{
@@ -10683,7 +10703,7 @@
 				{
 					"command": "gitlens.views.workspaces.delete",
 					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
-					"group": "inline@1"
+					"group": "inline@2"
 				},
 				{
 					"command": "gitlens.views.switchToAnotherBranch",
@@ -11824,9 +11844,19 @@
 					"group": "inline@1"
 				},
 				{
+					"command": "gitlens.views.workspaces.addRepo",
+					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
+					"group": "inline@1"
+				},
+				{
 					"command": "gitlens.views.workspaces.locateRepo",
-					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)/ || viewItem =~ /gitlens:workspaceMissingRepository\\b/",
+					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)(?!.*?\\b\\+local\\b)/ || viewItem =~ /gitlens:workspaceMissingRepository\\b/",
 					"group": "inline@2"
+				},
+				{
+					"command": "gitlens.views.workspaces.removeRepo",
+					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)(?!.*?\\b\\+local\\b)/ || viewItem =~ /gitlens:workspaceMissingRepository\\b/",
+					"group": "inline@3"
 				},
 				{
 					"command": "gitlens.views.stash.rename",
