--- a/package.json
+++ b/package.json
@@ -6812,6 +6812,12 @@
 				"icon": "$(folder-opened)"
 			},
 			{
+				"command": "gitlens.views.workspaces.open",
+				"title": "Open As Code Workspace...",
+				"category": "GitLens",
+				"icon": "$(file-code)"
+			},
+			{
 				"command": "gitlens.views.workspaces.removeRepo",
 				"title": "Remove Repository from Workspace...",
 				"category": "GitLens",
@@ -9157,6 +9163,10 @@
 					"when": "false"
 				},
 				{
+					"command": "gitlens.views.workspaces.open",
+					"when": "false"
+				},
+				{
 					"command": "gitlens.views.workspaces.removeRepo",
 					"when": "false"
 				},
@@ -10701,9 +10711,19 @@
 			],
 			"view/item/context": [
 				{
-					"command": "gitlens.views.workspaces.delete",
+					"command": "gitlens.views.workspaces.open",
+					"when": "viewItem =~ /gitlens:workspace/",
+					"group": "inline@1"
+				},
+				{
+					"command": "gitlens.views.workspaces.addRepo",
 					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
 					"group": "inline@2"
+				},
+				{
+					"command": "gitlens.views.workspaces.delete",
+					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
+					"group": "inline@3"
 				},
 				{
 					"command": "gitlens.views.switchToAnotherBranch",
@@ -10732,14 +10752,19 @@
 					"alt": "gitlens.copyRemoteBranchesUrl"
 				},
 				{
+					"command": "gitlens.views.workspaces.open",
+					"when": "viewItem =~ /gitlens:workspace/",
+					"group": "1_gitlens_actions@1"
+				},
+				{
 					"command": "gitlens.views.workspaces.addRepo",
 					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
-					"group": "1_gitlens_actions@1"
+					"group": "1_gitlens_actions@2"
 				},
 				{
 					"command": "gitlens.views.workspaces.delete",
 					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
-					"group": "1_gitlens_actions@2"
+					"group": "1_gitlens_actions@3"
 				},
 				{
 					"command": "gitlens.views.switchToAnotherBranch",
@@ -11854,19 +11879,14 @@
 					"group": "inline@1"
 				},
 				{
-					"command": "gitlens.views.workspaces.addRepo",
-					"when": "viewItem =~ /gitlens:workspace\\b(?=.*?\\b\\+cloud\\b)/",
-					"group": "inline@1"
-				},
-				{
 					"command": "gitlens.views.workspaces.locateRepo",
 					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)(?!.*?\\b\\+local\\b)/ || viewItem =~ /gitlens:workspaceMissingRepository\\b/",
-					"group": "inline@2"
+					"group": "inline@1"
 				},
 				{
 					"command": "gitlens.views.workspaces.removeRepo",
 					"when": "viewItem =~ /gitlens:repository\\b(?=.*?\\b\\+workspace\\b)(?!.*?\\b\\+local\\b)/ || viewItem =~ /gitlens:workspaceMissingRepository\\b/",
-					"group": "inline@3"
+					"group": "inline@2"
 				},
 				{
 					"command": "gitlens.views.workspaces.locateRepo",
